Remove TieredKitSelectionUI class and its associated functionality for kit selection in the MicroBattles plugin.