@@ -1,31 +1,30 @@
 package com.cookiebuild.microbattles.listener;
 
-import java.util.UUID;
+import java.util.List;
 
-import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
+import org.bukkit.event.block.Action;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
-import org.geysermc.geyser.api.GeyserApi;
 
-import com.cookiebuild.cookiedough.service.PlayerMinigameProgressionService;
-import com.cookiebuild.microbattles.ui.ImprovedKitSelectionUI;
+import com.cookiebuild.cookiedough.service.MinigameStatsService;
+import com.cookiebuild.microbattles.kits.KitManager;
+import com.cookiebuild.microbattles.ui.KitSelectionUI;
+
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 
 public class KitSelectorListener implements Listener {
 
-    private final ImprovedKitSelectionUI kitSelectionUI;
-    private final PlayerMinigameProgressionService progressionService;
+    private static final String KIT_SELECTOR_NAME = "§6Kit Selector";
+    private final KitSelectionUI kitSelectionUI;
 
-    public static final String KIT_SELECTOR_NAME = ChatColor.GOLD + "Kit Selector";
-
-    public KitSelectorListener(ImprovedKitSelectionUI kitSelectionUI,
-            PlayerMinigameProgressionService progressionService) {
-        this.kitSelectionUI = kitSelectionUI;
-        this.progressionService = progressionService;
+    public KitSelectorListener(KitManager kitManager, MinigameStatsService statsService) {
+        this.kitSelectionUI = new KitSelectionUI(kitManager, statsService);
     }
 
     @EventHandler
@@ -33,45 +32,43 @@ public class KitSelectorListener implements Listener {
         Player player = event.getPlayer();
         ItemStack item = event.getItem();
 
-        if (item == null || item.getType() != Material.COOKIE) {
+        if (event.getAction() != Action.RIGHT_CLICK_AIR && event.getAction() != Action.RIGHT_CLICK_BLOCK) {
             return;
         }
 
-        if (!item.hasItemMeta() || !item.getItemMeta().hasDisplayName()) {
+        if (item == null || item.getType() != Material.COOKIE || !item.hasItemMeta()) {
             return;
         }
 
-        String displayName = item.getItemMeta().getDisplayName();
-        if (!displayName.equals(KIT_SELECTOR_NAME)) {
+        ItemMeta meta = item.getItemMeta();
+        if (meta == null || !KIT_SELECTOR_NAME.equals(meta.getDisplayName())) {
             return;
         }
 
         event.setCancelled(true);
-
-        // Ouvrir l'interface de sélection des kits
-        UUID playerId = player.getUniqueId();
-        if (GeyserApi.api().isBedrockPlayer(playerId)) {
-            kitSelectionUI.openKitSelectionForm(player);
-        } else {
-            kitSelectionUI.openKitSelectionGUI(player);
-        }
+        kitSelectionUI.openKitSelectionGUI(player);
     }
 
-    /**
-     * Crée un cookie de sélection de kit
-     */
     public static ItemStack createKitSelectorCookie() {
-        ItemStack cookie = new ItemStack(Material.COOKIE);
-        ItemMeta meta = cookie.getItemMeta();
-
+        ItemStack kitSelector = new ItemStack(Material.COOKIE);
+        ItemMeta meta = kitSelector.getItemMeta();
         if (meta != null) {
             meta.setDisplayName(KIT_SELECTOR_NAME);
-            meta.setLore(java.util.Arrays.asList(
-                    ChatColor.GRAY + "Clic droit pour choisir votre kit !",
-                    ChatColor.YELLOW + "Utilisez-moi avant le début de la partie"));
-            cookie.setItemMeta(meta);
+            meta.setLore(List.of(
+                    "§7Right-click to select your kit",
+                    "§7Choose from available kits",
+                    "§7and their different tiers"));
+            kitSelector.setItemMeta(meta);
         }
+        return kitSelector;
+    }
 
-        return cookie;
+    public static void giveKitSelectorCookie(Player player) {
+        player.getInventory().setItem(0, createKitSelectorCookie());
+        player.sendMessage(Component.text("Use the cookie to select your kit!").color(NamedTextColor.YELLOW));
+    }
+
+    public KitSelectionUI getKitSelectionUI() {
+        return kitSelectionUI;
     }
 }
